--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="en" >
 
 <head>
-
-  <meta charset="UTF-8">
-  
-<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
-<meta name="apple-mobile-web-app-title" content="CodePen">
-
-<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
-
-<link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
-
-
-  <title>CodePen - A Pen by KJUnraveled</title>
-  
-  
+	<title>uWu</title>
   
   
 <style>
 @import url("https://fonts.googleapis.com/css?family=Raleway:900&display=swap");
-
+<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+.btn {
+	position: absolute;
+	top: 300px;
+	display:grid;
+	place-items: center;
+}
+.btn_1 {
+	background-color: aquamarine;
+	width:50px;
+	height:50px;
+	border-radius:30px;
+	font-weight: bold;
+	font-family: 'Open Sans';
+}
+	
 body {
     margin: 0px;
 }
@@ -165,6 +167,8 @@ body {
 		<h2>Pub</h2>
 	</div>
 </section>
+	
+	<div class="btn"><button class="btn_1">Join</button></div>
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
   
